# stripe-terminal

./: .gitignore  README.md
backend/: Cargo.toml  package-lock.json  package.json  server.js
backend/src/: main.rs
frontend/: index.html  script.js
legacy-backend/: server.js
