[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper", "terminal"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
